<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:background="@drawable/blue_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:focusable="true"
        android:text="@string/txt_check_pic"/> 
    
    <LinearLayout
        android:id="@+id/layout1" 
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
        <TextView
            android:id="@+id/lName"
            android:width="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingRight="5dp"
            android:text="@string/txt_name" />
         
        <EditText
            android:id="@+id/fPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_person_name"
            android:inputType="textPersonName" >

        </EditText>

        <ImageButton
        	android:id="@+id/search_contact"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/search_button"
        	android:contentDescription="@string/content_description"
        	android:onClick="onSearchContact"/>
        
    </LinearLayout>
  
    <LinearLayout
        android:id="@+id/layout2"  
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
        <TextView
            android:id="@+id/lEmail"
            android:width="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:text="@string/txt_email" />
         
        <EditText
            android:id="@+id/fEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
        
        <TextView
            android:width="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
        
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/layout3"  
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
        <TextView
            android:id="@+id/lPhone"
            android:width="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:text="@string/txt_phone" />
         
        <EditText
            android:id="@+id/fPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"/>
         
        <ImageButton
        	android:id="@+id/search_phone"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/search_button"
        	android:contentDescription="@string/content_description"
        	android:onClick="onSearchMobile"/>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/layout4"  
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
    	<Button
        	android:id="@+id/take_photo"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="15sp"
        	android:height="30dp"
        	android:width="200dp"
        	android:background="@drawable/gray_selector"
        	android:onClick="onTakeSmallPhoto"
        	android:text="@string/btn_take_pic" />
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/layout5"  
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
    	<ImageView
       	 	android:id="@+id/photo"
       	 	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
      	  	android:visibility="visible"
      	  	android:contentDescription="@string/content_description"
      	  	android:src="@drawable/noshow_pic" />
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/layout6"  
        android:orientation="horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        
    	<Button
        	android:id="@+id/confirm"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="15sp"
        	android:height="30dp"
        	android:width="100dp"
        	android:background="@drawable/gray_selector"
        	android:text="@string/btn_confrim" 
        	android:onClick="onConfrim"/>
	</LinearLayout>
   	
</LinearLayout>
	
</ScrollView>