<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:background="@drawable/blue_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:focusable="true"
        android:text="@string/txt_check_graph"/> 
        
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="20dp"
    	android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/lBrithDate"
            android:width="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/txt_brith_date" />
                
   	 	<Button
       		android:id="@+id/btnDate"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/button_background"
        	android:onClick="onClickDate"/>
   	 	
   	 	<!-- <DatePicker
        android:id="@+id/dpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>-->
        
    </LinearLayout>
   
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
   	 	
    	<TextView
            android:id="@+id/lBrithTime"
            android:width="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/txt_brith_time" />
    
   		<Button
        	android:id="@+id/btnTime"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/button_background"
        	android:onClick="onClickTime"/>
   		
   		<TextView
            android:id="@+id/lPostTime"
            android:width="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:text="@string/txt_birth_time_label" />
       
    	<!-- <TimePicker 
        android:id="@+id/tpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>-->
    </LinearLayout>
    
    <Button
        android:id="@+id/confirm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:height="30dp"
        android:width="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_selector"
        android:text="@string/btn_confrim" 
        android:onClick="onConfrim"/>
        	
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray_bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/txt_contact" />

</LinearLayout>

</ScrollView>
