<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical" 
    tools:context=".AplyFormFrgmt" >

    <LinearLayout 
        android:id="@+id/layout_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:text="@string/txt_welcome" />
    
    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:text="@string/txt_brand" />
    
     </LinearLayout>
     
    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/layout_welcome"
        android:onClick="onApplyForm"
        android:contentDescription="@string/content_description"/>

    <!--<TextView
        android:id="@+id/footer_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"       
        android:layout_below="@+id/welcome_img"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:text="@string/fotter_address" />-->
</RelativeLayout>
